--- a/cleaved_optimized/localisation/english/victory_points_l_english.yml
+++ b/cleaved_optimized/localisation/english/victory_points_l_english.yml
@@ -6,6 +6,7 @@
  VICTORY_POINTS_3434:0 "Butterfly Castle"
  VICTORY_POINTS_2205:0 "Britta's Tacos"
  VICTORY_POINTS_1715:0 "Echo Creek High School"
+ VICTORY_POINTS_1763:0 "Solarian Camp"
  VICTORY_POINTS_834:0 "Diaz Residence"
  VICTORY_POINTS_3187:0 "Monterey Bay Aquarium"
  VICTORY_POINTS_1844:0 "San Fransisco"
