Focus Tree Adjustments, Building Adjustments, OOB Additions
Mina gets a post-septarsis war tree (Just a repurposed branch from legacy)

--- a/cleaved_optimized/localisation/english/MEW_focuses_l_english.yml
+++ b/cleaved_optimized/localisation/english/MEW_focuses_l_english.yml
@@ -20,7 +20,7 @@
  MEW_allow_redcross:0 "Usher in Disaster Relief"
  MEW_allow_redcross_desc:0 "This new world we find ourselves in has many organizations dedicated to assisting those in need in the midst of a crisis such as our own. Already, many noble volunteers of the "Red Cross" are in our lands helping our people. We can usher in many more relief workers, such as the "Army of Salvation" however this may make us more dependent on outside forces..."
  
- MEW_end_of_the_cleaving_chaos:0 "End of the Chaos"
+ MEW_end_of_the_cleaving_chaos:0 "Cleaved"
  MEW_end_of_the_cleaving_chaos_desc:0 "Finally, the worst of this crisis has subsided. We can now look at this new strange world we find ourselves in."
  
  MEW_negotiation_over_cleaved:0 "Neotiation over the Cleaved Zone"
