--- a/cleaved_optimized/localisation/english/cle_ideologies_l_english.yml
+++ b/cleaved_optimized/localisation/english/cle_ideologies_l_english.yml
@@ -6,7 +6,7 @@
  mewman_regency:0 "Mewman Regency"
  
  fascism:0 "Authoritarianism"
- fascism_desc:0 "Authoritarianism is a form of government where strict obedience to a central authority is enforced at the expense of personal freedom."
+ fascism_desc:0 "Authoritarian Regime"
  gen_nazism:0 "Authoritarianism is a form of government where strict obedience to a central authority is enforced at the expense of personal freedom."
  mewman_authoritarianism:0 "Mewman Absolutism"
  mewman_authoritarianism_desc:0 "Opposed to regular Mewman monarchy where the Monarch of Mewni must maintain appeasement between the people, various lords, and other powerful factions, Mewman Absolutism gives the Monarch of Mewni absolute power. Under Mewman absolutism, dissent is harshly punished.\n\nNaturally, this style of Government requires a strong and competent leader."
