Big One - Shared Post War and Eclipsa Political Post War

--- a/cleaved_optimized/localisation/english/victory_points_l_english.yml
+++ b/cleaved_optimized/localisation/english/victory_points_l_english.yml
@@ -35,3 +35,4 @@
  VICTORY_POINTS_1390:0 "Ponyhead Castle"
  VICTORY_POINTS_2495:0 "Septarian Palace"
  VICTORY_POINTS_3250:0 "Castle Avarius"
+ VICTORY_POINTS_3368:0 "Monument to the War Of The Butterflies"
