--- a/cleaved_optimized/localisation/english/shared_mewman_post_civwar_focus_l_english.yml
+++ b/cleaved_optimized/localisation/english/shared_mewman_post_civwar_focus_l_english.yml
@@ -1,3 +1,91 @@
 ﻿l_english:
 
+mewni_post_civwar_recovery:0 "Recovery"
+
+mewni_post_civwar_hyperindustrialization:0 "Hyperindustrialization"
+
+mewni_post_civwar_highway_effort:0 "Mewman Highway"
+
+mewni_post_civwar_modern_utilities:0 "Modern Utilities"
+mewni_post_civwar_modern_utilities_desc:0 "Water, power, firestations and more. These things must be available to all in a modern nation."
+
+mewni_post_civwar_border_stops:0 "Border Entry Points"
+
+mewni_post_civwar_new_middle_class:0 "New Middle Class"
+
+mewni_post_civwar_mewman_stock_market:0 "Mewman Stock Market"
+
+mewni_post_civwar_modern_globalized_economy:0 "Globalized Economy"
+
+mewni_post_civwar_monument_to_the_fallen:0 "Monument to the Fallen"
+mewni_post_civwar_monument_to_the_fallen_desc:0 "No matter what side of the civil war you were on, you were still a Mewman. We must memorialize the fallen, on all sides, to further heal from the civil war."
+
+mewni_post_civwar_catching_up:0 "Playing Catch-up"
+
+mewni_post_civwar_industrial_effort:0 "Industrial Technologies"
+
+mewni_post_civwar_tech_sector:0 "Tech Sector"
+
+mewni_post_civwar_silicon_valley:0 "Silicon Valley"
+
+mewni_post_civwar_oil_up:0 "Oil Up"
+
+mewni_post_civwar_raw_materials:0 "Sucking Everything out the Earth"
+
+mewni_post_civwar_stamping_out_resistance:0 "Stamping out Resistance"
+
+mewni_post_civwar_modernize_armed_forces:0 "Modernizing the Armed Forces"
+
+mewni_post_civwar_air_effort:0 "Air Effort"
+
+ mewni_post_civwar_fighter_focus:0 "Fighter Focus"
+ mewni_post_civwar_fighter_focus_desc:0 "We have not seen that last of dogfights in the Great War. Keeping ahead in the development of fighter planes will give us an edge in the future."
+ mewni_post_civwar_bomber_focus:0 "Bomber Focus"
+ mewni_post_civwar_bomber_focus_desc:0 "When people of the future speak of the horror to today's wars, fire raining from the skies will prominently feature. We will do our best to ensure those stories are told by our enemies."
+ mewni_post_civwar_aviation_effort_2:0 "Aviation Effort II"
+ mewni_post_civwar_aviation_effort_2_desc:0 "Further advances in aviation will be necessary to integrate our air force well with other branches of the military."
+ mewni_post_civwar_CAS_effort:0 "CAS Effort"
+ mewni_post_civwar_CAS_effort_desc:0 "A modern army needs support from vehicles not only on the ground, but also in the air."
+ mewni_post_civwar_rocket_effort:0 "Rocket Effort"
+ mewni_post_civwar_rocket_effort_desc:0 "Rocket and jet engines allow for unprecedented speeds for unmanned and manned vessels alike. Pioneering these technologies will allow us to take the enemy by surprise."
+ mewni_post_civwar_NAV_effort:0 "NAV Effort"
+ mewni_post_civwar_NAV_effort_desc:0 "Just as the new naval warfare takes place in part beneath the water's surface, part of it takes place in the air above the waters."
+
+ mewni_post_civwar_anti_air_effort:0 "Anti-Air Effort"
+
+ mewni_post_civwar_anti_air_effort2:0 "'Magic' Dome"
+ 
+ mewni_post_civwar_army_effort:0 "Army Effort"
+ 
+ mewni_post_civwar_future_of_knighthood:0 "Future of the Knighthood"
+ 
+ mewni_post_civwar_centralize_armed_forces:0 "Centralize the Armed Forces"
+ 
+ mewni_post_civwar_state_and_economy:0 "State and Economy"
+ 
+ mewni_post_civwar_open_up_armed_forces:0 "Open Up the Armed Forces"
+ 
+ mewni_post_civwar_tank_effort:0 "Tank Effort"
+ 
+ mewni_post_civwar_tank_effort2:0 "Tank Effort II"
+ 
+ mewni_post_civwar_anti_tank_effort:0 "Anti Tank Effort"
+ 
+ mewni_post_civwar_motorized_effort:0 "Motorization Effort"
+ 
+ mewni_post_civwar_supplyline_effort:0 "Supply Efforts"
+ 
+ mewni_post_civwar_mechanized_effort:0 "Mechanization Efforts"
+ 
+ mewni_post_civwar_doctrine_effort:0 "War Strategy"
+ 
+ mewni_post_civwar_doctrine_effort2:0 "War Strategy II"
+ 
+ mewni_post_civwar_small_arms_effort:0 "Updating Weaponry"
+ 
+ mewni_post_civwar_small_arms_effort2:0 "New Standard Issue Weaponry"
+ 
+ mewni_post_civwar_artillery_effort:0 "Large Weapons Initiative"
+ 
+
 mewni_post_civwar_modern_utilities_tooltip:0 "Upgrades Infrastructure in all states with Level One Infrastructure"
