--- a/cleaved_optimized/localisation/english/MEW_focuses_l_english.yml
+++ b/cleaved_optimized/localisation/english/MEW_focuses_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+
+ advisor_unlock_tooltip:0 "§YUnlocks Advisor(s)§!"
+
  MEW_stow_the_flames:0 "Stow the Flames"
  MEW_stow_the_flames_desc:0 "Officials in disarray, Star going missing, half our kingdom merging with another world, Magic ceasing to exist, all of this in the aftermath of a coup and a monster rights movement! With atleast Mina gone, we can start addressing the crisis in the wider Kingdom."
  
