--- a/cleaved_optimized/localisation/english/visnov_text_l_english.yml
+++ b/cleaved_optimized/localisation/english/visnov_text_l_english.yml
@@ -207,4 +207,63 @@
  
  visnov_variable_text_speech_90:0 "Hey, you people forgot to put it away!"
  
+ #Trying out new 
  
+ visnov_variable_text_speech_100000001:0 "§gPeace. To Mewni, a very welcome yet alien word. First were the Solarian Wars, then centuries of Monster Rebellions. Then the Septarian War, which killed Queen Comet and made Moon a Queen at age 14.§!"
+
+ visnov_variable_text_speech_100000002:0 "§gThen Ludo, then Meteora, then Mina, then the Cleaving, and now finally the so-called War of the Butterflies. It just ended, thank corn, but that didn’t mean peace would last.§!"
+ 
+ visnov_variable_text_speech_100000003:0 "§gSeptarsis, that old enemy, raids and pillages earthni. Surely, they’re bound to look at Mewni as juicy loot.§!"
+ 
+ visnov_variable_text_speech_100000004:0 "§gMina’s warlord-fiefdom grows in power each day, hardened by the desert and by the hatred in their hearts. If the mad-woman’s plans go right, she’ll be marching to Mewni to restore a Solarian order.§!"
+ 
+ visnov_variable_text_speech_100000005:0 "§gThe safety of Mewni, and perhaps the fate of the entire Mewman people, now rests on the shoulders of the winner of the Mewman Civil War...§!"
+ 
+ visnov_variable_text_speech_101000001:0 "§gQueen Eclipsa represents a continuation of pre-cleaved Mewni: the same royal feudalism which has served Mewni for centuries, paired with a new commitment to monster rights.§!"
+ 
+ visnov_variable_text_speech_101000002:0 "§gPerhaps an unwavering agenda is what Mewni needs to grow stable and strong. Perhaps it will render it backwards and inefficient. These questions and more plagued Eclipsa’s mind as she looked at her reflection.§!"
+ 
+ visnov_variable_text_speech_101000003:0 "§gShe was backstage, preparing for her victory speech that would address the whole kingdom. The war had taken a toll on her, and she could find a few new wrinkles and bigger eyebags staring back at her.§!"
+ 
+ visnov_variable_text_speech_101001001:0 "Oh, where have the years gone, girl?"
+ 
+ visnov_variable_text_speech_101000004:0 "§gSuddenly, she felt a large yet gentle hand rest on her shoulder§!"
+ 
+ visnov_variable_text_speaker_14:0 "§RGlobgor§!"
+ visnov_variable_text_speech_101002001:0 "You’re still as beautiful as the day we ran away together, boo."
+ 
+ visnov_variable_text_speech_101000005:0 "§gEclipsa smiled gently and rested a royally-gloved hand on her husband’s.§!"
+ 
+ visnov_variable_text_speech_101001002:0 "Thank you, Globby…"
+ 
+ visnov_variable_text_speech_101000006:0 "§gEclipsa was still frowning, which Globgor spotted in the mirror immediately. He knelt down and put both hands on her shoulders, giving a slight massage.§!"
+ 
+ visnov_variable_text_speech_101002002:0 "What’s wrong, honey?"
+ 
+ visnov_variable_text_speech_101001003:0 "I never thought it would come to this… or even *close* to this. I’m glad we won the war, but I wish there was never a war to begin with."
+ 
+ visnov_variable_text_speech_101002003:0 "There’s a lot of things I wish were different. I wish we could have loved freely in our time. But things worked out, didn't they-"
+ 
+ visnov_variable_text_speech_101001004:0 "Sometimes I think that I could have stopped it somehow. If I had done something different, a decree there, an agreement here… Tens of thousands have died because of this war. It could have been all my fault."
+ 
+ visnov_variable_text_speech_101000007:0 "§gGlobgor deftly spun Eclipsa’s chair around.§!"
+ 
+ visnov_variable_text_speech_101002004:0 "Hey, you can’t think like that. They knew what they were signing up for. They wanted to fight for you. For Mewni. Where I come from, that’s the best way to go. And… and do you hear that?"
+ 
+ visnov_variable_text_speech_101000008:0 "§gThey kept themselves silent for a while. In the background, already tuned out by them so they had to focus, were the cheers of Mewmans outside celebrating the end of the war. Cheering for peace, cheering for Eclipsa.§!"
+ 
+ visnov_variable_text_speech_101002005:0 "We could only dream of that when you were first cornonated. Eclipsa, the people support you more than they ever have. They believe in you. I believe in you."
+ 
+ visnov_variable_text_speech_101002006:0 "Corn, Eclipsa! You got Mewni through Meteora, Mina, Monster rights! And now this? The Cleaving, and the War of the Butterflies? You are so capable, and skilled, and talented and…"
+ 
+ visnov_variable_text_speech_101000009:0 "§gGlobgor took a moment to gather his thoughts and feelings, trying to condense them all into a shorter statement.§!"
+ 
+ visnov_variable_text_speech_101002007:0 "I love you, Eclipsa. And you’re gonna be one of the best Queens Mewni’ll ever have."
+ 
+ visnov_variable_text_speech_101000010:0 "§gA shocked Eclipsa’s face turned into a smile as she remembered why she fell in love with Globgor in the first place. She slowly stood up, taking both of her husband’s hands in hers.§!"
+ 
+ visnov_variable_text_speech_101001005:0 "I think I'm ready for that speech. Are you coming with me?"
+ 
+ visnov_variable_text_speech_101002008:0 "I wouldn’t miss it for the dimension."
+ 
+ visnov_variable_text_speech_101000011:0 "§gThey walked, hand in hand, to thousands of cheering crowds. Ready to face whatever Earthni threw at them.§!"
